--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "chart.js": "^4.5.1",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
