--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.26.3",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
